Don't send PING in response to PONG if a PING is already scheduled.

Avoids getting kicked off a server for flooding with multiple clients
connected to a bouncer that forwards PONGs to all of them.

Patch by Alexandre Becoulet, many thanks!

BUG:241858